2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/lib.am: Add LD.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonicalize-tools.m4: Remove RTEMS_PATH_TOOL, use
	AC_CHECK_TOOL instead of RTEMS_PATH_TOOL in RTEMS_CANONICALIZE_TOOLS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
  
	* aclocal/*: Replace with contents of macros/*.m4
	* macros/: Remove.
	* aclocal/ar-s.m4 aclocal/tool-prefix.m4: Remove.
	* Makefile.am: Reflect changes to aclocal/ and macros/.

2000-10-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: New, Cygnus/GNU style configuration.
	* Makefile.am: Add macros/, reflect new configure.in,
	ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/macros
	* automake/compile.am: BSP_SPECS, remove RTEMS_CANONICALIZATION.
	* automake/lib.am: Remove RTEMS_CANONICALIZATION.
	* macros/tool-prefix.m4: Remove.
	* macros/target.m4: Remove RTEMS_CONFIG_SUBDIRS, RTEMS_OUTPUT_SUBDIRS.
	* macros/enable-rtemsbsp.m4: Add RTEMS_CONFIG_PER_BSP, add setting 
	RTEMS_ROOT.
	* macros/i386-gas-code16.m4: Define NEW_GAS only for 16bit mode-
	* macros/multilib.m4: Various minor fixes.
	* macros/project-root.m4: Remove setting PROJECT_TOPdir,
	PROJECT_ROOT, RTEMS_ROOT.
	* macros/rtems-top.m4: Remove RTEMS_CANONICALIZATION, TARGET_SUBDIRS;
	Add with_target_subdirs, PROJECT_TOPdir, PROJECT_ROOT.

2000-10-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

 	* automake/multilib.am: New file.
 	* Makefile.am: Update AUTOMAKE_FILES to reflect the contents of
 	the automake/ directory.

2000-10-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* macros/enable-hwapi.m4: Removed.
	* aclocal/rtems-top.m4, automake/compile.am, automake/lib.am:
	A small cleanup step towards gnu-canonicalization.

2000-09-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* macros: New directory.
	* macros/bsp-alias.m4: new file.
	* macros/canonical-host.m4: new file.
	* macros/canonical-target-name.m4: new file.
	* macros/canonicalize-tools.m4: new file.