@@ -1,5 +1,11 @@
 2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
+	* aclocal/canonicalize-tools.m4, aclocal/check-tool.m4,
+	aclocal/prog-cc.m4, aclocal/prog-cxx.m4:  Replace AC_CHECK_TOOL
+	with an RTEMS specific but more restrictive autoconf macro.
+
+2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
 	* automake/lib.am: Add LD.
 
 2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
